--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,7 @@
 <%- include("partials/header") %>
-<h1>Index Page</h1>
 
 <% blogs.forEach(function(blog){ %>
-    <div>
+    <div class="content-body">
         <h2><%= blog.title %></h2>
         <img src="<%= blog.image %>" alt="blog image">
         <div><span><%= blog.created %></span></div>
