--- a/views/new.ejs
+++ b/views/new.ejs
@@ -16,6 +16,7 @@
             <textarea name="blog[body]" cols="30" rows="10"></textarea>
         </div>
         <input class="ui violet big basic button" type="submit">
+        <a class="ui violet big basic button" href="/blogs">Back</a>
     </form>
 </div>
 
