Delete route was added

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -6,6 +6,10 @@ i.icon {
     margin-top: 7.0em;
 }
 
-.content-body{
+.content-body {
     margin-top: 7.0em;
+}
+
+#delete {
+    display: inline;
 }
