--- a/views/new.ejs
+++ b/views/new.ejs
@@ -13,7 +13,7 @@
         </div>
         <div class="field">
             <label>Blog Content</label>
-            <textarea name="blog[body]" cols="30" rows="10"></textarea>
+            <textarea name="blog[body]" cols="30" rows="10" required></textarea>
         </div>
         <input class="ui violet big basic button" type="submit">
         <a class="ui violet big basic button" href="/blogs">Back</a>
