styled the index page

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -15,8 +15,8 @@
             <label>Blog Content</label>
             <textarea name="blog[body]" cols="30" rows="10" required></textarea>
         </div>
-        <input class="ui violet big basic button" type="submit">
-        <a class="ui violet big basic button" href="/blogs">Back</a>
+        <input class="ui violet big inverted button" type="submit">
+        <a class="ui orange big inverted button" href="/blogs">Back</a>
     </form>
 </div>
 
